# blog

./: base_style.css  index.html  pyproject.toml  scroll-to-top.js  smooth-scroll.css  smooth-scroll.js  typewriter.css  typewriter.js
blog/blog/: settings.py
blog/blog_app/: models.py  views.py
blog_project/blog_app/: urls.py
blog_project/blog_project/: settings.py  urls.py
