[tool.poetry]
name = "blog"
version = "0.1.0"
description = ""
authors = ["Joaquin Hernandez Martinez <proyecto_noether@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
